@@ -55,96 +55,6 @@ class SmartyBC extends Smarty {
 
 
 	/**
-	 * Get template directories
-	 *
-	 * @note this wrapper ensures data integrity that's non-BC done by setters
-	 * @param mixed index of directory to get, null to get all
-	 * @return array|string list of template directories, or directory of $index
-	 */
-	public function getTemplateDir($index=null)
-	{
-	    // make sure we're dealing with an array
-	    $this->template_dir = (array) $this->template_dir;
-	    // make sure directories end with a DS
-	    foreach ($this->template_dir as $k => $v) {
-            $this->template_dir[$k] = rtrim($v, '/\\') . DS;
-	    }
-
-	    if ($index !== null) {
-	        return isset($this->template_dir[$index]) ? $this->template_dir[$index] : null;
-	    }
-
-		return $this->template_dir;
-	}
-
-	/**
-	 * Get config directory
-	 *
-	 * @note this wrapper ensures data integrity that's non-BC done by setters
-	 * @param mixed index of directory to get, null to get all
-	 * @return array|string list of config directories, or directory of $index
-	 */
-	public function getConfigDir($index=null)
-	{
-	    // make sure we're dealing with an array
-	    $this->config_dir = (array) $this->config_dir;
-	    // make sure directories end with a DS
-	    foreach ($this->config_dir as $k => $v) {
-            $this->config_dir[$k] = rtrim($v, '/\\') . DS;
-	    }
-
-	    if ($index !== null) {
-	        return isset($this->config_dir[$index]) ? $this->config_dir[$index] : null;
-	    }
-
-		return $this->config_dir;
-	}
-
-	/**
-	 * Get plugin directories
-	 *
-	 * @note this wrapper ensures data integrity that's non-BC done by setters
-	 * @param mixed index of directory to get, null to get all
-	 * @return array list of plugin directories
-	 */
-	public function getPluginsDir($index=null)
-	{
-	    // make sure we're dealing with an array
-	    $this->plugins_dir = (array) $this->plugins_dir;
-	    // make sure directories end with a DS
-	    foreach ($this->plugins_dir as $k => $v) {
-            $this->plugins_dir[$k] = rtrim($v, '/\\') . DS;
-	    }
-
-	    if ($index !== null) {
-	        return isset($this->plugins_dir[$index]) ? $this->plugins_dir[$index] : null;
-	    }
-
-		return $this->plugins_dir;
-	}
-
-	/**
-	 * Get compiled directory
-	 *
-	 * @return string path to compiled templates
-	 */
-	public function getCompileDir()
-	{
-		return rtrim($this->smarty->compile_dir, '/\\') . DS;
-	}
-
-	/**
-	 * Get cache directory
-	 *
-	 * @return string path of cache directory
-	 */
-	public function getCacheDir()
-	{
-		return rtrim($this->smarty->cache_dir, '/\\') . DS;
-	}
-
-
-	/**
 	 * wrapper for assign_by_ref
 	 *
      * @param string $tpl_var the template variable name
